--- a/source/xborder/www/index.html
+++ b/source/xborder/www/index.html
@@ -25,7 +25,7 @@
 
 	<script type="text/template" id="homeview" src="js/tpl/HomeView.html"></script>
 	
-<!--	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>-->
+	<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 
 
 	<script src="js/lib/jquery.js"></script>
