--- a/source/xborder/platforms/ios/www/js/tpl/HomeView.html
+++ b/source/xborder/platforms/ios/www/js/tpl/HomeView.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 </div>
-<div class="topcoat-list">
+<div id="homeViewList" class="topcoat-list">
     <div id="homeViewHeader" class="topcoat-list__header">
         <div id="homeViewHeaderButtonBar" class="topcoat-button-bar">
             <div class="topcoat-button-bar__item">
@@ -32,18 +32,5 @@
             </div>
         </div>
     </div>
-    <ul id="extra" class="topcoat-list__container">
-        <!--    <h2 class="topcoat-list__header"><%=city%></h2>-->
-            
-        <!--
-                <span id="distance" class="topcoat-button--cta homeViewHeaderButton">Distance</span>
-                <span id="hotDeals" class="topcoat-button--cta homeViewHeaderButton">Hot Deals</span>
-                <span id="clits" class="topcoat-button--cta homeViewHeaderButton">Clits</span>
-        -->
-<!--
-                
-        <div id="scrollArea" class="scrollable">
-        </div>
--->
-    </div>
+    <ul id="extra" class="topcoat-list__container"></ul>
 </div>
