--- a/source/xborder/platforms/ios/www/js/tpl/SubscriberPageViewTemplate.html
+++ b/source/xborder/platforms/ios/www/js/tpl/SubscriberPageViewTemplate.html
@@ -1,6 +1,6 @@
 <div class="topcoat-navigation-bar">
     <div class="topcoat-navigation-bar__item left">
-        <div class="topcoat-icon-button--quiet back-button" >
+        <div class="topcoat-icon-button back-button" >
             <span class="topcoat-icon topcoat-icon--back"></span>
         </div>
     </div>
@@ -18,7 +18,7 @@
 </div>
 -->
     
-<div class="topcoat-list__container">       
+<div >       
     <div class="scroller" style="top:4.3rem;">
         <div class="centerImageParent">
             <div id="picture" class="centerImageChild">
@@ -36,9 +36,9 @@
             <p style="float:none;margin-left:1.2rem">Facebook: <%= facebook %></p>
             <p style="float:none;margin-left:1.2rem">Twitter: <%= twitter %></p>
         </div>
-        <div id="ads" class="topcoat-list__container">
+        <div id="ads" class="topcoat-list">
             <h2 class="topcoat-list__header">Ads</h2>
-            <ul id="adsList" class="topcoat-list">
+            <ul id="adsList" class="topcoat-list__container">
             </ul>
         </div>
     </div>
