--- a/source/xborder/platforms/ios/www/js/tpl/ExploreViewTemplate.html
+++ b/source/xborder/platforms/ios/www/js/tpl/ExploreViewTemplate.html
@@ -1,15 +1,17 @@
 <div class="topcoat-navigation-bar">
-    <div class="topcoat-navigation-bar__item left quarter">
-        <div class="topcoat-icon-button--quiet back-button" >
+    <div class="topcoat-navigation-bar__item left">
+        <div class="topcoat-icon-button back-button" >
             <span class="topcoat-icon topcoat-icon--back"></span>
         </div>
     </div>
-    <div class="topcoat-navigation-bar__item center half">
+    <div class="topcoat-navigation-bar__item center">
         <h1 class="topcoat-navigation-bar__title" >Locations</h1>
     </div>
-    <!--<div class="topcoat-navigation-bar__item right quarter">-->
-        <!--<h1 class="topcoat-navigation-bar__title" ></h1>-->
-    <!--</div>-->
+    <div class="topcoat-navigation-bar__item right">
+        <div class="topcoat-icon-button">
+            <span class="topcoat-icon like-icon"></span>
+        </div>
+    </div>
 </div>
 <div class="topcoat-list__container scroller" style="top:4rem;">
     <h2 class="topcoat-list__header">Select a new city</h2>
