--- a/source/xborder/www/index.html
+++ b/source/xborder/www/index.html
@@ -52,7 +52,7 @@
 <body>
     
     <div id="splash">
-        <img  class="splash" src="pics/clitter.gif"  alt="splash">
+        <img  class="splash" src="pics/clitter.gif"  alt="splash" style="height:100%;">
     </div>
 
 	
